Fixed whitespace issue on front page.

--- a/app/assets/stylesheets/application/sticky_footer.less
+++ b/app/assets/stylesheets/application/sticky_footer.less
@@ -31,10 +31,10 @@ footer {
 
 @media (max-width: @screen-xs-max) {
   body {
-    margin-bottom: 230px;
+    margin-bottom: 250px;
   }
 
   footer {
-    height: 230px;
+    height: 250px;
   }
 }
